# sippy

./: .gitignore  .gitmodules  CMakeLists.txt
include/sdp/: attributes.h  description.h  fields.h  message.h  types.h
include/sip/: account.h  auth.h  bodies.h  headers.h  message.h  requests.h  responses.h  session.h  transport.h  types.h
src/crypto/: milenge.cpp  milenge.h  rijndael.cpp  rijndael.h
src/lang/: lexer.cpp  lexer.h  nfa.cpp  nfa.h
src/sdp/: attr_container.cpp  attribute_read_write.cpp  description.cpp  fields_read_write.cpp  message.cpp  reader.cpp  reader.h  types.cpp  types_storage.cpp  types_storage.h  writer.cpp  writer.h
src/serialization/: matchers.h  reader.cpp  reader.h
src/sip/: account.cpp  auth.cpp  bodies_read_write.cpp  header_storage.h  headers_read_write.cpp  message.cpp  parser.cpp  parser.h  reader.cpp  reader.h  requests.cpp  responses.cpp  session.cpp  transport.cpp  types.cpp  types_storage.cpp  types_storage.h  writer.cpp  writer.h
src/util/: base64.cpp  base64.h  hash.cpp  hash.h  hex.cpp  hex.h  meta.h  streams.h  string_helper.cpp  string_helper.h
